add New parameter in task chat api
