# app/Http/Controllers/Api/v1/UserController.php
@@ -936,10 +936,14 @@ class UserController extends Controller
                         $messageDetails = $message->message->task;
                         break;
                 }
-
+                $attachment_type = "";
+                if($message->message->message_type == 'Attachment'){
+                    $attachment_type = $message->message->attachment_type;
+                }
                 return [
                     'messageId' => $message->message->id,
                     'messageType' => $message->message->message_type,
+                    'attachmentType' => $message->message->attachment_type,
                     'date' => @$request->timezone ? Carbon::parse($message->message->created_at)->setTimezone($request->timezone)->format('Y-m-d H:i:s') : Carbon::parse($message->message->created_at)->format('Y-m-d H:i:s'),
                     'time' => @$request->timezone ? Carbon::parse($message->message->created_at)->setTimezone($request->timezone)->format('h:i a') : Carbon::parse($message->message->created_at)->format('h:i a'),
                     'sentBy' => ($message->sender_id == $loginUser) ? 'loginUser' : 'User',
